force-app/main/default/objects/Cost_Catalog__c/Cost_Catalog__c.object-meta.xml
<CustomObject>
    <description>Cloudscape cost catalog entry: unit cost, freight, and landed cost per SKU with GP calculation.</description>
    <label>Cost Catalog</label>
    <nameField>
        <displayFormat>CC-{YYYY}-{0000}</displayFormat>
        <label>Cost Catalog Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Catalog</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>