force-app/main/default/objects/Cost_Catalog__c/fields/GP_Pct__c.field-meta.xml
<CustomField>
    <fullName>GP_Pct__c</fullName>
    <formula>IF(Standard_Price__c > 0, (Standard_Price__c - Landed_Cost__c) / Standard_Price__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GP %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>