force-app/main/default/objects/Cost_Catalog__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Cost Catalog Entries</relationshipLabel>
    <relationshipName>Cost_Catalog_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>