force-app/main/default/objects/Cost_Catalog__c/fields/Landed_Cost__c.field-meta.xml
<CustomField>
    <fullName>Landed_Cost__c</fullName>
    <formula>Unit_Cost__c + IF(ISNULL(Freight__c), 0, Freight__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Landed Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>