force-app/main/default/objects/Cost_Catalog__c/fields/Low_Stock_Flag__c.field-meta.xml
<CustomField>
    <fullName>Low_Stock_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Low Stock Flag</label>
    <type>Checkbox</type>
</CustomField>