force-app/main/default/objects/Cost_Catalog__c/fields/Standard_Price__c.field-meta.xml
<CustomField>
    <fullName>Standard_Price__c</fullName>
    <description>Synced from Standard Pricebook entry by CloudscapeIngestService. Used for GP calculation.</description>
    <label>Standard Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>